# LLM_HUB

./: .env.example  .gitignore  README.md  poetry.lock.backup  pyproject.toml
.streamlit/: config.toml
llm_app/backend/chat/: chat_manager.py
llm_app/backend/database/: base_storage.py
llm_app/backend/llms/: anthropic_llm.py  available_models.py  base_llm.py  llm_factory.py
llm_app/backend/llms/models/: __init__.py  anthropic_llm.py  base_llm.py  openai_llm.py
llm_app/backend/memory/: base_memory.py  buffer_memory.py  custom_memory.py  langgraph_memory.py  memory_factory.py
llm_app/backend/utils/: __init__.py  available_models.json  available_models.py
llm_app/frontend/: app.py
llm_app/frontend/components/: chat_box.py  select_model.py  select_settings.py  settings_sidebar.py
tests/: o1_test.py  test_anthropic.py  test_available_models.py  test_memory.py  test_openai.py
